Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15062

Information Schema COLUMNS Table does not show system versioning information

    XMLWordPrintable

Details

    Description

      Given the following table:

      CREATE TABLE t (x INT WITH SYSTEM VERSIONING, y INT);
      

      there is no distinction between the two columns in the information schema columns table:

      SELECT * FROM INFORMATION_SCHEMA.COLUMNS WHERE TABLE_NAME='t'\G
      *************************** 1. row ***************************
                 TABLE_CATALOG: def
                  TABLE_SCHEMA: test
                    TABLE_NAME: t
                   COLUMN_NAME: x
              ORDINAL_POSITION: 1
                COLUMN_DEFAULT: NULL
                   IS_NULLABLE: YES
                     DATA_TYPE: int
      CHARACTER_MAXIMUM_LENGTH: NULL
        CHARACTER_OCTET_LENGTH: NULL
             NUMERIC_PRECISION: 10
                 NUMERIC_SCALE: 0
            DATETIME_PRECISION: NULL
            CHARACTER_SET_NAME: NULL
                COLLATION_NAME: NULL
                   COLUMN_TYPE: int(11)
                    COLUMN_KEY: 
                         EXTRA: 
                    PRIVILEGES: select,insert,update,references
                COLUMN_COMMENT: 
                  IS_GENERATED: NEVER
         GENERATION_EXPRESSION: NULL
      *************************** 2. row ***************************
                 TABLE_CATALOG: def
                  TABLE_SCHEMA: test
                    TABLE_NAME: t
                   COLUMN_NAME: y
              ORDINAL_POSITION: 2
                COLUMN_DEFAULT: NULL
                   IS_NULLABLE: YES
                     DATA_TYPE: int
      CHARACTER_MAXIMUM_LENGTH: NULL
        CHARACTER_OCTET_LENGTH: NULL
             NUMERIC_PRECISION: 10
                 NUMERIC_SCALE: 0
            DATETIME_PRECISION: NULL
            CHARACTER_SET_NAME: NULL
                COLLATION_NAME: NULL
                   COLUMN_TYPE: int(11)
                    COLUMN_KEY: 
                         EXTRA: 
                    PRIVILEGES: select,insert,update,references
                COLUMN_COMMENT: 
                  IS_GENERATED: NEVER
         GENERATION_EXPRESSION: NULL
      2 rows in set (0.001 sec)
      

      Attachments

        Activity

          People

            serg Sergei Golubchik
            greenman Ian Gilfillan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 10m
                10m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.