MDEV-15062 Information Schema COLUMNS Table does not show system versioning information

get_schema_column_record(): print 'WITHOUT SYSTEM VERSIONING` in 'EXTRA'
for such fields